Corrections on alignment of the forecast icons

--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,7 @@ main {
 }
 .weather-forecast-temps {
   font-size: 13px;
+ 
 }
 .forecast-weather-min {
   opacity: 0.5;
@@ -98,6 +99,11 @@ main {
   height: 88px;
   display: block;
   margin: 0 auto;
+}
+.weather-forecast-day{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 footer {
   border-top: 1px solid #d2daff;
